--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,30 +4,30 @@ services:
   source_postgres:
     image: postgres:latest
     ports:
-      -"5433:5432"
+      - "5433:5432"
     networks:
       - elt_network
     environment:
-      - POSTGRES_DB: source_db
-      - POSTGRES_USER: postgres
-      - POSTGRES_PASSWORD: secret
+      POSTGRES_DB: source_db
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: secret
     volumes:
       - ./source/init.sql:/docker-entrypoint-initdb.d/init.sql
 
   destination_postgres:
     image: postgres:latest
     ports:
-      -"5434:5432"
+      - "5434:5432"
     networks:
       - elt_network
     environment:
-      - POSTGRES_DB: destination_db
-      - POSTGRES_USER: postgres
-      - POSTGRES_PASSWORD: secret
+      POSTGRES_DB: destination_db
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: secret
   
   etl_script:
     build:
-      context: ./elt_script
+      context: ./elt
       dockerfile: Dockerfile
     command: ["python", "elt_script.py"]
     networks:
