--- a/elt/Dockerfile
+++ b/elt/Dockerfile
@@ -2,6 +2,6 @@ FROM python:3.8-slim
 
 RUN apt-get update && apt-get install -y postgresql-client
 
-COPY etl_scripy.py .
+COPY elt_script.py .
 
-CMD [ "python", "etl_scripy.py" ]
+CMD [ "python", "elt_scripy.py" ]
