--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,9 +2,9 @@ version: '3'
 
 services:
   source_postgres:
-    image: postgres:latest
+    image: postgres:15.5
     ports:
-      - "5433:5432"
+      - "5432:5432"
     networks:
       - elt_network
     environment:
@@ -24,12 +24,12 @@ services:
       POSTGRES_DB: destination_db
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: secret
-  
-  etl_script:
+
+  elt_script:
     build:
-      context: ./elt
-      dockerfile: Dockerfile
-    command: ["python", "elt_script.py"]
+      context: ./elt # Directory containing the Dockerfile and elt_script.py
+      dockerfile: Dockerfile # Name of the Dockerfile, if it's something other than "Dockerfile", specify here
+    command: sh -c "sleep 5 && python elt_script.py"
     networks:
       - elt_network
     depends_on:
