--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -25,37 +25,37 @@ services:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: secret
 
-  elt_script:
-    build:
-      context: ./elt # Directory containing the Dockerfile and elt_script.py
-      dockerfile: Dockerfile # Name of the Dockerfile, if it's something other than "Dockerfile", specify here
-    command: sh -c "python elt_script.py"
-    networks:
-      - elt_network
-    depends_on:
-      - source_postgres
-      - destination_postgres
+#  elt_script:
+#    build:
+#      context: ./elt # Directory containing the Dockerfile and elt_script.py
+#      dockerfile: Dockerfile # Name of the Dockerfile, if it's something other than "Dockerfile", specify here
+#    command: sh -c "python elt_script.py"
+#    networks:
+#      - elt_network
+#    depends_on:
+#      - source_postgres
+#      - destination_postgres
   
-  dbt:
-    image: ghcr.io/dbt-labs/dbt-postgres:1.4.7
-    command:
-      [
-        "run",
-        "--profiles-dir",
-        "/root",
-        "--project-dir",
-        "/dbt"
-      ]
-    networks:
-      - elt_network
-    volumes:
-      - ./custom_postgres:/dbt
-      - ~/.dbt:/root
-    depends_on:
-      - elt_script
-    environment:
-      DBT_PROFILE: default
-      DBT_TARGET: dev
+#  dbt:
+#    image: ghcr.io/dbt-labs/dbt-postgres:1.4.7
+#    command:
+#      [
+#        "run",
+#        "--profiles-dir",
+#        "/root",
+#        "--project-dir",
+#        "/dbt"
+#      ]
+#    networks:
+#      - elt_network
+#    volumes:
+#      - ./custom_postgres:/dbt
+#      - ~/.dbt:/root
+#    depends_on:
+#     - elt_script
+#    environment:
+#      DBT_PROFILE: default
+#      DBT_TARGET: dev
 
   postgres:
     image: postgres:latest
@@ -136,6 +136,8 @@ services:
       - AIRFLOW__WEBSERVER__SECRET_KEY=secret
       - AIRFLOW_WWW_USER_USERNAME=airflow
       - AIRFLOW_WWW_USER_PASSWORD=password
+    ports:
+      - "8080:8080"
     command: scheduler
 
 networks:
